yaml/07-domain/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus.chinadaas.com
  namespace: kube-system
spec:
  rules:
  - host: prometheus.chinadaas.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-monitoring
          servicePort: 9090
